app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: app
spec:
  selector:
    app: java-app
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
